--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:6541/shareit
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
